# aosp14

./: aosp14-manifest.xml
bootable/libbootloader/gbl/libgbl/: Android.bp  Cargo.toml
hardware/google/aemu/: Android.bp  CMakeLists.txt  README.md  rebuild.sh
hardware/google/aemu/CMake/: Version.cmake
hardware/google/aemu/base/: AlignedBuf_unittest.cpp  Android.bp  ArraySize_unittest.cpp  CLog.cpp  CMakeLists.txt  CStream.cpp  CompressingStream.cpp  DecompressingStream.cpp  FileUtils.cpp  GLObjectCounter.cpp  HealthMonitor.cpp  HealthMonitor_unittest.cpp  LayoutResolver.cpp  LruCache_unittest.cpp  ManagedDescriptor_unittest.cpp  MemStream.cpp  MemoryTracker.cpp  MessageChannel.cpp  Metrics.cpp  Optional_unittest.cpp  PathUtils.cpp  SharedLibrary.cpp  SharedMemory_posix.cpp  SharedMemory_unittest.cpp  SharedMemory_win32.cpp  StdioStream.cpp  Stream.cpp  StreamSerializing.cpp  StringFormat.cpp  StringFormat_unittest.cpp  StringParse_unittest.cpp  StringUtils.cpp  SubAllocator.cpp  SubAllocator_unittest.cpp  System.cpp  Thread_pthread.cpp  Thread_win32.cpp  Tracing.cpp  TypeTraits_unittest.cpp  Win32UnicodeString.cpp  (+4 more)
hardware/google/aemu/host-common/: Android.bp  AndroidPipe.cpp  CMakeLists.txt  DmaMap.cpp  GfxstreamFatalError.cpp  GfxstreamFatalError_unittest.cpp  GoldfishDma.cpp  HostAddressSpace_unittest.cpp  HostGoldfishPipe.cpp  HostmemIdMapping.cpp  MediaCudaUtils.cpp  MediaH264DecoderCuvid.cpp  MediaH264DecoderDefault.cpp  MediaH264DecoderFfmpeg.cpp  MediaH264DecoderGeneric.cpp  MediaVpxDecoder.cpp  MediaVpxDecoderGeneric.cpp  MultiDisplayPipe.cpp  RefcountPipe.cpp  address_space_device.cpp  address_space_graphics.cpp  address_space_graphics_unittests.cpp  address_space_host_media.cpp  address_space_host_memory_allocator.cpp  address_space_shared_slots_host_memory_allocator.cpp  crash_reporter.cpp  dma_device.cpp  empty-crash-handler.cpp  feature_control.cpp  goldfish_sync.cpp  hw-config.cpp  logging.cpp  logging_unittest.cpp  misc.cpp  vm_operations.cpp
hardware/google/aemu/snapshot/: Android.bp  CMakeLists.txt  TextureLoader.cpp  TextureSaver.cpp
system/keymint/wire/: Android.bp  Cargo.toml
system/keymint/wire/src/: keymint.rs  legacy.rs  types.rs
test/dittosuite/: Android.bp  AndroidTest.xml  CMakeLists.txt  README.md  dittobench.cpp  dittobench_benchmark.cpp  dittotrace.cpp
test/dittosuite/include/ditto/: arg_parser.h  binder.h  binder_request.h  binder_service.h  close_file.h  cpu_work.h  delete_file.h  instruction.h  instruction_factory.h  instruction_set.h  invalidate_cache.h  logger.h  memory_allocation.h  multiprocessing.h  multithreading.h  multithreading_utils.h  open_file.h  parser.h  read_directory.h  read_write_file.h  resize_file.h  result.h  sampler.h  shared_variables.h  statistics.h  syscall.h  timespec_utils.h  tracer.h  utils.h
test/dittosuite/schema/: Android.bp  CMakeLists.txt  benchmark.proto  result.proto
test/dittosuite/src/: arg_parser.cpp  binder.cpp  binder_request.cpp  binder_service.cpp  close_file.cpp  cpu_work.cpp  delete_file.cpp  instruction.cpp  instruction_factory.cpp  instruction_set.cpp  invalidate_cache.cpp  logger.cpp  memory_allocation.cpp  multiprocessing.cpp  multithreading.cpp  multithreading_utils.cpp  open_file.cpp  parser.cpp  read_directory.cpp  read_write_file.cpp  resize_file.cpp  result.cpp  sampler.cpp  shared_variables.cpp  syscall.cpp  timespec_utils.cpp  tracer.cpp  utils.cpp
test/dittosuite/test/: CMakeLists.txt  close_file_test.cpp  delete_file_test.cpp  example_test.cpp  invalidate_cache_test.cpp  logger_test.cpp  open_file_test.cpp  read_directory_test.cpp  read_file_test.cpp  resize_file_test.cpp  result.cpp  shared_variables_test.cpp  statistics_test.cpp  time_sampler_test.cpp  timespec_utils_test.cpp  tracer_test.cpp  write_file_test.cpp
test/dittosuite/test/include/: instruction_test.h  mock_syscall.h
tools/asuite/adevice/: Android.bp  Cargo.toml  README.md  adevice_integration_test.sh
tools/asuite/adevice/adevice_proto/: Cargo.toml
tools/asuite/adevice/src/: adevice.rs  adevice_fingerprint.rs  cli.rs  commands.rs  device.rs  fingerprint.rs  lib.rs  main.rs  metrics.rs  restart_chooser.rs  tracking.rs
tools/asuite/adevice/tests/: partial_program_tests.rs  whole_program_tests.rs
tools/netsim/: Android.bp  CMakeLists.txt  README.md
tools/netsim/cmake/: netsim_dependencies.cmake
tools/netsim/guide/: CODING_STYLE.md  book.toml
tools/netsim/guide/src/: README.md  SUMMARY.md
tools/netsim/pdl/: CMakeLists.txt
tools/netsim/proto/: Android.bp  CMakeLists.txt
tools/netsim/proto/netsim/: common.proto  config.proto  frontend.proto  hci_packet.proto  model.proto  packet_streamer.proto  startup.proto  stats.proto
tools/netsim/rust/: CMakeLists.txt  Cargo.toml  netsim.cc  netsimd.cc
tools/netsim/rust/cli/: Cargo.toml  build.rs  netsim-cli.md
tools/netsim/rust/common/: Cargo.toml
tools/netsim/rust/daemon/: Cargo.toml  build.rs
tools/netsim/rust/proto/: CMakeLists.txt  Cargo.toml  build_cargo.rs
tools/netsim/scripts/: build_ui.sh  cmake_setup.sh  format_code.sh  proto_update.sh  version_bump.sh
tools/netsim/src/: CMakeLists.txt  netsim-packet-streamer-client.cc
tools/netsim/src/backend/: backend_packet_hub.h  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  packet_streamer_client.cc  packet_streamer_client.h
tools/netsim/src/core/: server.cc  server.h
tools/netsim/src/frontend/: frontend_client.cc  frontend_client.h  frontend_client_stub.cc  frontend_client_stub.h  frontend_server.cc  frontend_server.h  server_response_writable.h
tools/netsim/src/hci/: async_manager.cc  bluetooth_facade.cc  bluetooth_facade.h  hci_packet_hub.h  hci_packet_transport.cc  hci_packet_transport.h  (+2 more)
tools/netsim/ui/: Android.bp  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
tools/rr_prebuilt/: Makefile  README.md  pyproject.toml  requirements.txt  update.py  update.sh
tools/rr_prebuilt/rrprebuiltupdater/: __init__.py  buildapi.py  repo.py  updater.py
tools/rr_prebuilt/tests/: mockbuildapi.py  test_buildapi.py  test_repo.py  test_updater.py
(+6245 files in other folders)
